src/test/ui/impl-trait/universal-two-impl-traits.stderr
error[E0308]: mismatched types
  --> $DIR/universal-two-impl-traits.rs:17:9
   |
LL |     a = y; //~ ERROR mismatched
   |         ^ expected type parameter, found a different type parameter
   |
   = note: expected type `impl Debug` (type parameter)
              found type `impl Debug` (type parameter)

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0308"
